@@ -68,6 +68,7 @@ Copyright: 2010 Henning Schroeder <henning.schroeder@gmail.com>
 Copyright: 2010 Stolati <mickael.kerbrat@gmail.com>
 Copyright: 2010 Waldemar Kornewald <wkornewald@gmail.com>
 Copyright: 2010 legith.fairplay@gmail.com
+Copyright: 2010 Jordan Wii <jordonwii@gmail.com>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
